refactor(button): remove prefix

--- a/stories/Button.stories.mdx
+++ b/stories/Button.stories.mdx
@@ -85,10 +85,6 @@ import "../lib/Button";
       table: { category: "props" },
       description: 'Tells the browser to download the linked file as this filename. Only used when `href` is set.'
     },
-    prefix:{
-      table: { category: "slot" },
-      description: "The prefix name for the button's label. Only use for inserting an icon"
-    },
     label:{
       table: { category: "slot" },
       description: "The slot name for the button's label."
@@ -108,7 +104,7 @@ export const Template = (args) =>
       .target=${args.target}
       .download=${args.download}
     >
-      ${args.buttonLabel}
+      <span slot="label">${args.buttonLabel}</span>
     </sgds-button>
   `;
 
