--- a/stories/Button.stories.mdx
+++ b/stories/Button.stories.mdx
@@ -7,14 +7,7 @@ import "../lib/Button";
 <Meta
   title="Components/Button"
   argTypes={{
-    buttonLabel:{
-      name: 'label',
-      control: "text" ,
-      defaultValue: 'Hello World',
-      type: { name: 'string', required: true },
-      description: "The button's label"
-    },
-    buttonclasses: { 
+    buttonClasses: { 
       control: "text" ,
       table: { category: "props" },
       description: 'Optional. Can be used to insert any utility classes such as `me-auto`'
@@ -84,10 +77,6 @@ import "../lib/Button";
       control: 'text',
       table: { category: "props" },
       description: 'Tells the browser to download the linked file as this filename. Only used when `href` is set.'
-    },
-    label:{
-      table: { category: "slot" },
-      description: "The slot name for the button's label."
     }
   }}
 />
@@ -96,7 +85,7 @@ export const Template = (args) =>
   html`
     <sgds-button 
       .variant=${args.variant} 
-      .buttonclasses=${args.buttonclasses} 
+      .buttonClasses=${args.buttonClasses} 
       .size=${args.size}
       .active=${args.active}
       .disabled=${args.disabled}
@@ -104,7 +93,7 @@ export const Template = (args) =>
       .target=${args.target}
       .download=${args.download}
     >
-      <span slot="label">${args.buttonLabel}</span>
+      ${args.variant} 
     </sgds-button>
   `;
 
