feat(dropdown): rename file names and component names

--- a/stories/Dropdown.stories.mdx
+++ b/stories/Dropdown.stories.mdx
@@ -11,11 +11,14 @@ export const Template = (args) => {
     console.log(e.target)
   })
   return html`
-  <dropdown-element buttonText="Dropdown">
-    <dropdown-item value="1">test</dropdown-item>
-    <dropdown-item href="#" value="2">test</dropdown-item>
-    <dropdown-item href="#" value="3">test</dropdown-item>
-  </dropdown-element>
+  <sgds-dropdown buttonText="Dropdown">
+    <sgds-dropdown-item value="1">test</sgds-dropdown-item>
+    <sgds-dropdown-item href="#" value="2">test</sgds-dropdown-item>
+    <sgds-dropdown-item href="#" value="3">test</sgds-dropdown-item>
+    <sgds-dropdown-item href="#" value="3">test</sgds-dropdown-item>
+    <sgds-dropdown-item href="#" value="3">test</sgds-dropdown-item>
+    <sgds-dropdown-item href="#" value="3">test</sgds-dropdown-item>
+  </sgds-dropdown>
 `;
 };
 
