docs(input): add storybook documentation

--- a/stories/Input.stories.mdx
+++ b/stories/Input.stories.mdx
@@ -203,9 +203,9 @@ export const Template = (args) =>
     </sgds-input>
   `;
 
-# SgdsButton
+# SgdsInput
 
-Buttons communicate actions that users can take throughout your portal which can be used in places such as modals, forms and cards
+Text inputs allow your users to enter letters, numbers and symbols on a single line.
 
 <Canvas>
   <Story name="Basic" args={{ type: "text" }}>
