feat(dropdown): add toggle part

--- a/stories/Dropdown.stories.mdx
+++ b/stories/Dropdown.stories.mdx
@@ -167,6 +167,10 @@ import { partDescription } from "./common";
         category: "Event: SgdsDropdown",
       },
     },
+    toggle: {
+      table: { category: "part: SgdsDropdown" },
+      description: partDescription,
+    },
     menu: {
       table: { category: "part: SgdsDropdown" },
       description: partDescription,
